core/tests/snapshots/scripts__addition.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (addition), \".rain\")).unwrap()"
---
Record(
    RainRecord(
        {
            "integers": Integer(
                RainInteger(
                    11,
                ),
            ),
            "lists": List(
                RainList(
                    [
                        Integer(
                            RainInteger(
                                1,
                            ),
                        ),
                        Integer(
                            RainInteger(
                                2,
                            ),
                        ),
                        Integer(
                            RainInteger(
                                3,
                            ),
                        ),
                        Integer(
                            RainInteger(
                                4,
                            ),
                        ),
                        Integer(
                            RainInteger(
                                5,
                            ),
                        ),
                        Integer(
                            RainInteger(
                                6,
                            ),
                        ),
                    ],
                ),
            ),
            "strings": String(
                "abcdef",
            ),
        },
    ),
)
