core/tests/snapshots/scripts__any_type.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (any_type), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        5,
    ),
)
