core/tests/snapshots/scripts__cache_closures.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/cache_closures.rain\").unwrap()"
---
Integer(
    RainInteger(
        23,
    ),
)
