core/tests/snapshots/scripts__cache_deps.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/cache_deps.rain\").unwrap()"
---
Boolean(
    true,
)
