core/tests/snapshots/scripts__closure.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/closure.rain\").unwrap()"
---
List(
    RainList(
        [
            String(
                "hi",
            ),
            String(
                "joe",
            ),
            String(
                "hi",
            ),
            String(
                "susan",
            ),
        ],
    ),
)
