core/tests/snapshots/scripts__closure_disambiguation.snap
---
source: core/tests/scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (closure_disambiguation), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        5,
    ),
)
