core/tests/snapshots/scripts__complex_closures.snap
---
source: core/tests/scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (complex_closures), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        23,
    ),
)
