core/tests/snapshots/scripts__create_area.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/create_area.rain\").unwrap()"
---
Unit
