core/tests/snapshots/scripts__destructure.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (destructure), \".rain\")).unwrap()"
---
List(
    RainList(
        [
            String(
                "4",
            ),
            Integer(
                RainInteger(
                    10,
                ),
            ),
        ],
    ),
)
