core/tests/snapshots/scripts__destructure_import.snap
---
source: core/tests/scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (destructure_import), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        16,
    ),
)
